--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ let particles = [], opponents = {};
 
 // --- МУЛЬТИПЛЕЕР (ЗАГЛУШКА) ---
 // Замени URL ниже на ссылку от своего сервера после шага 2
-const socket = io("https://your-server-name.onrender.com"); 
+const socket = io("https://gta-servers.onrender.com"); 
 
 document.getElementById('go').onclick = () => {
     player.name = document.getElementById('nick').value || "RACER";
